fix bugs; schema registry getting compatibility & refreshing features; refactor some ser-deserializer code